--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -14,6 +14,7 @@ nav {
 
 h2 {
     margin: 0;
+    margin-right: -10px;
     padding: 0;
 }
 
@@ -21,7 +22,6 @@ h2 a img {
     background-color: white;
     border-radius: 50%;
     z-index: 2;
-    transform: translateX(10%);
     border: 5px solid var(--rose);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
     margin: 0;
@@ -81,7 +81,7 @@ ul li:hover .sub {
 
 
 h2 a img:hover{
-    transform: translateX(10%) rotateY(20deg);
+    transform: rotateY(20deg);
     box-shadow: -15px 0 10px 0 rgba(0, 0, 0, 0.2);
 }
 
